--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,4 +8,5 @@ jobs:
       - uses: actions/checkout@v2
       - uses: montudor/action-zip@v1
         with:
-          args: zip -qq -r m/project.zip .
+          files: dist/ *
+          dest: result.zip
